fix gratitude bullets left-alignment

--- a/public/css/text-titles.css
+++ b/public/css/text-titles.css
@@ -161,5 +161,8 @@ article {
   }
   .description {
     padding-bottom: 2rem;
+    ul {
+      padding-left: 1.5rem;
+    }
   }
 }
